# markdown_viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  config.example.ron  config.ron  test_code.md  test_images.md  test_links.md  test_table.md  test_tables.md  test_watch.md
.github/workflows/: ci.yml  release.yml
docs/implementations/: 0001_scrolling.md  0002_refactoring_main.md
src/: config.rs  lib.rs  main.rs
src/internal/: events.rs  file_handling.rs  file_watcher.rs  help_overlay.rs  image.rs  image_loader.rs  mod.rs  pdf_export.rs  rendering.rs  scroll.rs  search.rs  style.rs  text_highlight.rs  theme.rs  toc.rs  ui.rs  viewer.rs
themes/: ghost-in-the-shell-gpui.json  high_contrast.json
