[package]
name = "markdown_viewer"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
comrak = "0.48.0"
gpui = "0.2.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
