[package]
name = "markdown_viewer"
version = "0.10.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
comrak = "0.48.0"
gpui = "0.2.2"
image = "0.25.9"
markdown2pdf = "0.1.9"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
reqwest = { version = "0.12.24", features = ["json"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# SVG rasterization dependencies
# resvg/usvg/tiny-skia are used to rasterize SVG bytes into an RGBA bitmap
# so the existing `image`-based decoding path can handle the result uniformly.
# Versions chosen as reasonable conservative defaults; adjust if your toolchain needs different versions.
usvg = "0.45.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
